<resources>
    <string name="app_name">Tifiti Manager</string>

    // CHAT FRAGMENT STRINGS
    <string name="button_register">Register</string>
    <string name="hint_et">Must be connected to write here.</string>

    // REGISTER FRAGMENT STRING
    <string name="email_hint">Enter your Email here.</string>
    <string name="password_hint">Enter your Password here.</string>
    <string name="username_hint">Enter your username here.</string>

    // PROFILE FRAGMENT
    <string name="welcome_tv">Welcome,  </string>
    <string name="username_tv">Username</string>
    <string name="email_tv">Email</string>
    <string name="choose_bt">Choose your Avatar</string>

    // NEWS FRAGMENT
    <string name="titleExemple">Title</string>
    <string name="descriptionExemple">This is a description</string>
    <string name="dateExemple">01/01/01</string>

    // OBJECTS FRAGMENT
    <string name="sword_tv">Sword objects: </string>
    <string name="bow_tv">Bow objects: </string>
    <string name="rod_tv">Rod objects: </string>
    <string name="tear_tv">Tear objects: </string>
    <string name="vest_tv">Vest objects: </string>
    <string name="coat_tv">Coat objects: </string>
    <string name="belt_tv">Belt objects: </string>
    <string name="gloves_tv">Gloves objects: </string>
    <string name="spatula_tv">Spatula objects: </string>

    // OBJECTS_INFO FRAGMENT
    <string name="cerrar_bt">Cerrar</string>
    <string name="description_tv">Description</string>
    <string name="pasiva_tv">Pasiva</string>
    <string name="title_tv">Title</string>

    // TOAST ALERTS
    <string name="error_mail_invalid">Email is not valid.</string>
    <string name="error_password_invalid">Password must be at least %d chars long and contain letters &amp; numbers.</string>
    <string name="msg_user_registered">User Registered!</string>
    <string name="msg_profile_created">User Profile Created!</string>
    <string name="msg_profile_error">User Profile Error!</string>
    <string name="msg_userID_null">Error: userID is null</string>
    <string name="msg_username_null">Username cannot be empty</string>

    // BUTTONS
    <string name="btn_send">SEND</string>



</resources>