<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/layout_margin_small"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    app:cardBackgroundColor="@color/Secundary"
    app:cardCornerRadius="@dimen/cardCornerRadius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/newsBanner"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="@dimen/objectMargin"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/newsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/objectMargin"
            android:text="@string/titleExemple"
            android:textColor="@color/Tertiary"
            android:textSize="@dimen/titleSize" />

        <TextView
            android:id="@+id/newsDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/objectMargin"
            android:text="@string/descriptionExemple"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/descriptionSize" />

        <TextView
            android:id="@+id/newsDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="@dimen/objectMargin"
            android:text="@string/dateExemple"
            android:textColor="@color/Tertiary_1"
            android:textSize="@dimen/descriptionSize" />

    </LinearLayout>
</androidx.cardview.widget.CardView>




