<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Primary"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            // Sword objects recycler view
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/Secundary"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sword_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/objectMargin"
                    android:text="@string/sword_tv"
                    android:textColor="@color/Tertiary"
                    android:textStyle="bold"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/sword_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            // Bow objects recycler view

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/Secundary_2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/bow_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/objectMargin"
                    android:text="@string/bow_tv"
                    android:textColor="@color/Tertiary"
                    android:textStyle="bold"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/bow_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            // Rod objects recycler view

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/Secundary"
                android:orientation="vertical"
                android:textStyle="bold">

                <TextView
                    android:id="@+id/rod_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/objectMargin"
                    android:text="@string/rod_tv"
                    android:textColor="@color/Tertiary"
                    android:textStyle="bold"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rod_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            // Tear objects recycler view

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/Secundary_2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tear_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/objectMargin"
                    android:text="@string/tear_tv"
                    android:textColor="@color/Tertiary"
                    android:textStyle="bold"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tear_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            // Vest objects recycler view

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/Secundary"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/vest_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/objectMargin"
                    android:text="@string/vest_tv"
                    android:textColor="@color/Tertiary"
                    android:textStyle="bold"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/vest_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            // Coat objects recycler view

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/Secundary_2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/coat_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/objectMargin"
                    android:text="@string/coat_tv"
                    android:textColor="@color/Tertiary"
                    android:textStyle="bold"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/coat_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            // Belt objects recycler view

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/Secundary"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/belt_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/objectMargin"
                    android:text="@string/belt_tv"
                    android:textColor="@color/Tertiary"
                    android:textStyle="bold"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/belt_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            // Gloves objects recycler view

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/Secundary_2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/gloves_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/objectMargin"
                    android:text="@string/gloves_tv"
                    android:textColor="@color/Tertiary"
                    android:textStyle="bold"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/gloves_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            // Spatula objects recycler view

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/Secundary"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/spatula_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/objectMargin"
                    android:text="@string/spatula_tv"
                    android:textStyle="bold"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/spatula_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/Tertiary" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</FrameLayout>